--- a/style/style.css
+++ b/style/style.css
@@ -82,8 +82,6 @@ nav{
     padding-right: 30px;
 
     
-    
-
 
     
 }
@@ -132,6 +130,12 @@ nav{
 
 /* review section */
 
+.star{
+    color:#FFB805 ;
+    
+    size: 30px;
+}
+
 .review{
     display: flex;
     margin-left: 30px;
@@ -179,6 +183,38 @@ nav{
 }
 
 
+/* hero sec */
+.her04{
+    align-items: center;
+    text-align: center;
+    margin: 50px;
+    background-color: whitesmoke;
+    padding: 150px 71px;
+    margin-bottom: 10px;
+    
+}
+.readyp12{
+    font-weight: bold;
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+
+.prk1 p{
+    font-size: 50%;
+    margin-bottom: 20px;
+    font-weight: 400;
+
+
+}
+
+.pk2 img{
+    margin-top: 20px;
+    border-radius: 48px;
+}
+
+/* form part */
+
+
 
 /* share property */
 
@@ -199,8 +235,66 @@ nav{
       border: none;
 
 
+
+}
+
+/* footer */
+
+.fft{
+    background-color: white;
+    margin: 30px;
+}
+
+.logof{
+    align-items: center;
+    text-align: center;
+    
+}
+.logof a{
+    text-decoration: none;
+    color: #4E47FF;
+    font-size: 100px;
+    
+}
+
+.fnav ul{
+    display: flex;
+    gap:25px;
+}
+.fnav ul li {
+    text-decoration: none;
+    color: white;
+}
+
+.fnav ul li a{
+    text-decoration: none;
+    color: #8987A1;
 }
 
 
 
 
+.form{
+    display: flex;
+    justify-content: space-around;
+    background-color: whitesmoke;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+
+
+
+.hp{
+    font-size: 50px;
+    margin-top: 80px;
+
+}
+
+.hill{
+    background-color: rgb(239, 239, 249);
+}
+
+.form input [type="email"]{
+    display: block;
+}
